--- a/projectISA-front/src/app/components/home/home.component.html
+++ b/projectISA-front/src/app/components/home/home.component.html
@@ -7,10 +7,10 @@
          <div class="row justify-content-center">
             <div class="col=12 mt-3">
                 <div class="jumbotron ">
-                  <h1 class="display-4">Hello, world!</h1>
-                  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                  <h1 class="display-4">Online medical center</h1>
+                  <p class="lead">This is a simple online medical center. You can reserve medical examination you want in just a few steps!</p>
                   <hr class="my-4">
-                  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                  <p>Don't have an accont? Register right now!</p>
             </div>
          </div>
         </div>
