--- a/projectISA-front/src/app/components/clinics/clinics.component.html
+++ b/projectISA-front/src/app/components/clinics/clinics.component.html
@@ -3,42 +3,47 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <div class="container">
-    <br>
+    <br />
+    <h3>Filter by:</h3>
     <div>
-        <p>Enter date: <input type="date" [(ngModel)]="myDate" /></p>
-        
-        <p>Enter type of examination: <input type="text" [(ngModel)]="type" /></p>
+        <p>Date: <input type="date" [(ngModel)]="myDate" /></p>
+
+        <p>Type of examination: <input type="text" [(ngModel)]="type" /></p>
         <button class="btn btn-primary" (click)="refresh()">Search</button>
     </div>
-
-    <div class="form-group">
-            <label>Sort by</label>
-            <select (change)="onChange()" class="custom-select" name="type"  [(ngModel)]="sortType" >
-                <option  *ngFor="let st of sortTypes" >{{st}}</option>
-            </select>
-        </div>
+    <br />
+    <hr />
+    
     <br>
-    <h4>List of available clinics: </h4>
-    <hr>
+    <h3>List of available clinics: </h3>
+    <div class="form-group">
+        <label>Sort by</label>
+        <select (change)="onChange()" class="custom-select" name="type" [(ngModel)]="sortType">
+            <option *ngFor="let st of sortTypes">{{st}}</option>
+        </select>
+    </div>
     <div class="row" id="ads" *ngIf="clinics.length > 0">
         <!-- Category Card -->
         <div class="col-md-4" *ngFor="let c of clinics">
             <div class="card rounded">
                 <div class="card-image">
-                     <span class="card-notify-year">
+                    <span class="card-notify-year">
                         <b>Average rating: {{c.avgClinicRate}}</b>
-                    </span> 
+                    </span>
                     <img class="img-fluid" src="assets/img/medicalclinic.jpg" alt="Alternate Text" />
                 </div>
-                
+
 
                 <div class="card-body text-center">
                     <h5>{{c.name}}</h5>
-                    <span class="card-detail-badge"><a class="moreLink" [routerLink]="['/clinic', c.id]">Show profile</a></span>
-                    <span class="card-detail-badge"><a class="moreLink" (click)="showDoctors(c.id)">Show doctors</a></span>
+                    <span class="card-detail-badge"><a class="moreLink" [routerLink]="['/clinic', c.id]">Show
+                            profile</a></span>
+                    <span class="card-detail-badge"><a class="moreLink" (click)="showDoctors(c.id)">Show
+                            doctors</a></span>
                 </div>
                 <!--pipe-->
-                <small><b>{{c.address.street}} {{c.address.number}}, {{c.address.city}}, {{c.address.country}}</b></small>
+                <small><b>{{c.address.street}} {{c.address.number}}, {{c.address.city}},
+                        {{c.address.country}}</b></small>
             </div>
         </div>
 
