--- a/projectISA-front/src/app/components/final-reservation/final-reservation.component.html
+++ b/projectISA-front/src/app/components/final-reservation/final-reservation.component.html
@@ -13,17 +13,17 @@
 
         <div class="form-group">
             <label>Type</label>
-            <select (change)="onChange()" class="custom-select" name="type"  [(ngModel)]="type" >
+            <select required (change)="onChange()" class="custom-select" name="type"  [(ngModel)]="type" >
                 <option  *ngFor="let myType of doctor.typesOfExamination" [ngValue]="myType">{{myType.type}}</option>
             </select>
         </div>
         
         <div class="form-group">
-            <label>Price izvuci iz doktora pa klinike pa cenovnika</label>
-            <input type="number" class="form-control" name="price" [(ngModel)]="price">
+            <label>Price</label>
+            <input required type="number" class="form-control" name="price" [(ngModel)]="price">
         </div>
         
-        <button class="btn btn-primary" type="submit">Reserve</button>
+        <button [disabled]="myForm.invalid"  class="btn btn-primary" type="submit">Reserve</button>
     </form>
 </div>
 
