--- a/projectISA-front/src/app/components/history/history.component.html
+++ b/projectISA-front/src/app/components/history/history.component.html
@@ -1,10 +1,5 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-
+<h2 style="margin-left: 50px; margin-top: 20px;">Medical examination history: </h2>
+			
 <div class="container">
 	<div class="form-group">
 		<label>Sort by</label>
@@ -15,8 +10,7 @@
 
 	<div class="row clearfix">
 		<div class="col-md-12 table-responsive">
-			<h4>Examination history: </h4>
-			<table class="table table-bordered table-hover table-sortable" id="tab_logic">
+			<table class="table table-bordered table-sortable" id="tab_logic">
 				<thead>
 					<tr>
 						<th class="text-center">
@@ -32,7 +26,7 @@
 							Duration(min)
 						</th>
 						<th class="text-center">
-							Price
+							Price(rsd)
 						</th>
 						<th class="text-center">
 							Clinic
@@ -40,30 +34,45 @@
 						<th class="text-center">
 							Medical room
 						</th>
+						<th class="text-center">
+							Your clinic rate
+						</th>
+						<th class="text-center">
+							Your doctor rate
+						</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr id='addr0' data-id="0" class="hidden" *ngFor="let examination of examinations">
 						<td data-name="name">
-							<input type="text" disabled name='name0' class="form-control" [value]="examination.date" />
+							{{examination.date | date}}
 						</td>
 						<td data-name="mail">
-							<input type="text" disabled name='mail0' class="form-control" [value]="examination.doctorUsername" />
+							{{examination.doctorUsername}}
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" [value]="examination.type" />
+							{{examination.type}}
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" [value]="examination.duration" />
+							{{examination.duration}}
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" [value]="examination.price" />
+							{{examination.price}}
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" [value]="examination.clinic" />
+						{{examination.clinic}}
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" [value]="examination.medicalRoom" />
+							{{examination.medicalRoom}}
+						</td>
+						<td data-name="desc">
+							<input type="number"   name="desc0" class="form-control" min="0" max="5" [(ngModel)]="examination.userClinicRate" />
+						</td>
+						<td data-name="desc">
+							<input type="number"  name="desc0" class="form-control" min="0" max="5" [(ngModel)]="examination.userDoctorRate" />
+						</td>
+						<td>
+							<button  class="btn btn-primary" (click)="applyRates(examination.userClinicRate,examination.userDoctorRate,examination.doctorUsername)">Apply rates</button>
 						</td>
 					</tr>
 				</tbody>
