--- a/projectISA-front/src/app/components/login/login.component.html
+++ b/projectISA-front/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
                 <div class="row">
                     <div class="col-md-3 register-left">
                         <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
-                        <h3>ProjectISA</h3>
+                        <h3>Online medical center</h3>
                         <p>Plese fill in all the fields in the login form in order to get signed in!</p>
                     </div>
                     <div class="col-md-9 register-right">
@@ -23,7 +23,7 @@
                                         <div class="form-group">
                                             <input type="password" [(ngModel)]="password" name="pass2" class="form-control"  placeholder="Password" value="" />
                                         </div>                                        
-                                        <input type="submit" (click)="login()" class="btnLogin"  value="Login"/>
+                                        <input type="submit" (click)="login()" class="btn btn-primary"  value="Login"/>
                                     </div>
                                 </div>
                             </div>
