--- a/projectISA-front/src/app/components/register/register.component.html
+++ b/projectISA-front/src/app/components/register/register.component.html
@@ -7,7 +7,7 @@
                 <div class="row">
                     <div class="col-md-3 register-left">
                         <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
-                        <h3>ProjectISA</h3>
+                        <h3>Online medical center</h3>
                         <p>Plese fill in all the fields in the registation form in order to get registered on our site!</p>
                     </div>
                     <div class="col-md-9 register-right">
@@ -18,42 +18,42 @@
                                 <div class="row register-form">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="text" [(ngModel)]="user.name" class="form-control" name="firstName" placeholder="First Name *" value="" />
+                                            <input required type="text" [(ngModel)]="user.name" class="form-control" name="firstName" placeholder="First Name *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" [(ngModel)]="user.lastName" class="form-control" name="lastName" placeholder="Last Name *" value="" />
+                                            <input required type="text" [(ngModel)]="user.lastName" class="form-control" name="lastName" placeholder="Last Name *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" [(ngModel)]="user.username"class="form-control" name="username" placeholder="Username *" value="" />
+                                            <input required type="text" [(ngModel)]="user.username"class="form-control" name="username" placeholder="Username *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="email" [(ngModel)]="user.email" class="form-control" name="email" placeholder="Email *" value="" />
+                                            <input required type="email" [(ngModel)]="user.email" class="form-control" name="email" placeholder="Email *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" [(ngModel)]="user.insuranceNumber" class="form-control" name="insNum" placeholder="Insurance number *" value="" />
+                                            <input required type="text" [(ngModel)]="user.insuranceNumber" class="form-control" name="insNum" placeholder="Insurance number *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" [(ngModel)]="user.phoneNumber" name="txtEmpPhone" class="form-control" placeholder="Your Phone *" value="" />
+                                            <input required type="text" [(ngModel)]="user.phoneNumber" name="txtEmpPhone" class="form-control" placeholder="Your Phone *" value="" />
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input type="password" [(ngModel)]="password1" name="pass1" class="form-control" placeholder="Password *" value="" />
+                                            <input required type="password" [(ngModel)]="password1" name="pass1" class="form-control" placeholder="Password *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" [(ngModel)]="password2" name="pass2" class="form-control"  placeholder="Confirm Password *" value="" />
+                                            <input required type="password" [(ngModel)]="password2" name="pass2" class="form-control"  placeholder="Confirm Password *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" [(ngModel)]="user.address.country" name="country" class="form-control" placeholder="Country *" value="" />
+                                            <input required type="text" [(ngModel)]="user.address.country" name="country" class="form-control" placeholder="Country *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" [(ngModel)]="user.address.city" name="city" class="form-control" placeholder="City *" value="" />
+                                            <input required type="text" [(ngModel)]="user.address.city" name="city" class="form-control" placeholder="City *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" [(ngModel)]="user.address.street" name="street" class="form-control" placeholder="Street *" value="" />
+                                            <input required type="text" [(ngModel)]="user.address.street" name="street" class="form-control" placeholder="Street *" value="" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="number" [(ngModel)]="user.address.number" name="number" class="form-control" placeholder="Number *" value="" />
+                                            <input required type="number" [(ngModel)]="user.address.number" name="number" class="form-control" placeholder="Number *" value="" />
                                         </div>
                                         
                                         <input type="submit" (click)="register()" class="btnRegister"  value="Register"/>
