--- a/projectISA-front/src/app/components/user-profile/user-profile.component.html
+++ b/projectISA-front/src/app/components/user-profile/user-profile.component.html
@@ -6,7 +6,11 @@
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
 <div class="container">
-	<img src="assets/img/profile.jpg" />
+	<img src="assets/img/profile.jpg" style="max-width: 300px; display: inline-block;" />
+	<div style="display: inline-block; width: 30rem;" class="badge badge-primary text-wrap" >
+		<h1 >{{user.name}} {{user.lastName}}</h1>
+	  </div>	  
+	
 	<div class="row clearfix">
 		<div class="col-md-12 table-responsive">
 			<h4>Profile: </h4>
@@ -56,7 +60,7 @@
 							<input type="text" disabled name="desc0" class="form-control" [(ngModel)]="user.insuranceNumber" />
                         </td>
                         <td data-name="del">
-							<button name="del0" class='btn btn-danger glyphicon glyphicon-remove row-remove'><span
+							<button name="del0" class='btn btn-primary glyphicon glyphicon-remove row-remove'><span
 									aria-hidden="true" (click)="update()">Update</span></button>
                         </td>
 					</tr>
