--- a/projectISA-front/src/app/components/clinics/clinics.component.html
+++ b/projectISA-front/src/app/components/clinics/clinics.component.html
@@ -1,6 +1,9 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
 
 <div class="container">
     <br />
@@ -13,7 +16,7 @@
     </div>
     <br />
     <hr />
-    
+
     <br>
     <h3>List of available clinics: </h3>
     <div class="form-group">
@@ -28,7 +31,13 @@
             <div class="card rounded">
                 <div class="card-image">
                     <span class="card-notify-year">
-                        <b>Average rating: {{c.avgClinicRate}}</b>
+                        <b *ngIf="c.avgClinicRate!=0">Average rating: {{c.avgClinicRate}}</b>
+                        <b *ngIf="c.avgClinicRate==0">Not rated yet</b>
+                        <span [class.checked]="c.avgClinicRate>0.49" class="fa fa-star"></span>
+                        <span [class.checked]="c.avgClinicRate>1.49" class="fa fa-star "></span>
+                        <span [class.checked]="c.avgClinicRate>2.49" class="fa fa-star "></span>
+                        <span [class.checked]="c.avgClinicRate>3.49" class="fa fa-star"></span>
+                        <span [class.checked]="c.avgClinicRate>4.49" class="fa fa-star"></span>
                     </span>
                     <img class="img-fluid" src="assets/img/medicalclinic.jpg" alt="Alternate Text" />
                 </div>
