Napravljen data.sql fajl za generisanje podataka u bazi

--- a/projectISA-front/src/app/components/final-reservation/final-reservation.component.html
+++ b/projectISA-front/src/app/components/final-reservation/final-reservation.component.html
@@ -20,7 +20,7 @@
         
         <div class="form-group">
             <label>Price</label>
-            <input required type="number" class="form-control" name="price" [(ngModel)]="price">
+            <input required disabled type="number" class="form-control" name="price" [(ngModel)]="price">
         </div>
         
         <button [disabled]="myForm.invalid"  class="btn btn-primary" type="submit">Reserve</button>
