Dorada podataka u data.sql i na front-u

--- a/projectISA-front/src/app/components/medical-record/medical-record.component.html
+++ b/projectISA-front/src/app/components/medical-record/medical-record.component.html
@@ -18,7 +18,7 @@
 
 	<div class="row clearfix">
 		<div class="col-md-12 table-responsive">
-			<h4>Examination history: </h4>
+			<h4>Examination reservations: </h4>
 			<table class="table table-bordered table-sortable" id="tab_logic">
 				<thead>
 					<tr>
