--- a/projectISA-front/src/app/components/user-profile/user-profile.component.html
+++ b/projectISA-front/src/app/components/user-profile/user-profile.component.html
@@ -48,7 +48,7 @@
 							<input type="text"  name='mail0' class="form-control" [(ngModel)]="user.lastName" />
 						</td>
 						<td data-name="desc">
-							<input name="desc0"  class="form-control" [(ngModel)]="user.username"/>
+							<input name="desc0" disabled  class="form-control" [(ngModel)]="user.username"/>
 						</td>
 						<td data-name="desc">
 							<input  type="text" disabled name="desc0" class="form-control" [(ngModel)]="user.email" />
